# pcollections

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml  tests.yml
pcollections/: __init__.py  _dict.py  _lazy.py  _list.py  _set.py
pcollections/abc/: __init__.py  _core.py  _map.py  _seq.py  _set.py
pcollections/test/: __init__.py  __main__.py  _dict.py  _list.py  _set.py
pcollections/util/: __init__.py  _core.py
